--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 body {
 	background-image: linear-gradient(45deg, #e7e5f4, #776bcc);
 	background-position: 150% 150%;
+	animation: background-image-position 15s linear infinite;
 }
 
 .container {
@@ -18,5 +19,155 @@ body {
 }
 
 .screen {
-	
+	background-color: linear-gradient(90deg, #5d54a5, #7e78b8);
+	position: relative;
+	height: 600px;
+	width: 360px;
+	box-shadow: 0px 0px 24px #5e5696;
+}
+
+.screen_content {
+	z-index: 1;
+	position: relative;
+	height: 100%;
+}
+
+.screen_background {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 0;
+	clip-path: inset(0 0 0 0);
+	-webki-clip-path: inset(0 0 0 0);
+}
+
+.screen_background_shape {
+	transform: rotate(45deg);
+	position: absolute;
+}
+
+.screen_background_shape1 {
+	height: 520px;
+	width: 520px;
+	background-color: white;
+	top: -50px;
+	right: 120px;
+	border-radius: 0 72px 0 0;
+}
+
+.screen_background_shape4 {
+	height: 400px;
+	width: 200px;
+	background-color: #7e7bb9;
+	top: 420px;
+	right: 50px;
+	border-radius: 60px;
+}
+
+.login {
+	width: 320px;
+	padding: 30px;
+	padding-top: 156px;
+}
+
+.login_field {
+	padding: 20px 0;
+	position: relative;
+}
+
+.login_icon {
+	position: absolute;
+	top: 30px;
+	color: #7875b5;
+}
+
+.login_input {
+	border: none;
+	border-bottom: 2px solid #d1d1d4;
+	background: none;
+	padding: 10px;
+	padding-left: 24px;
+	font-weight: 700;
+	width: 75%;
+	transition: all 0.2s ease;
+}
+
+.login_input:active,
+.login_input:focus,
+.login_input:hover {
+	outline: none;
+	border-bottom-color: #6a649e;
+}
+
+.login_submit {
+	background-color: white;
+	font-size: 14px;
+	margin-top: 30px;
+	padding: 16px 20px;
+	border-radius: 26px;
+	border: 1px solid #d4d3e8;
+	text-transform: uppercase;
+	font-weight: 700;
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	color: #4c489d;
+	box-shadow: 0 2px 2px #5c5696;
+	cursor: pointer;
+	transition: all 0.2s ease;
+}
+
+.login_submit:active,
+.login_submit:focus,
+.login_submit:hover {
+	border-color: #6a679e;
+	outline: none;
+}
+
+.button_icon {
+	font-size: 25px;
+	margin-left: auto;
+	color: #7875b5;
+}
+
+.social-login {
+	position: absolute;
+	height: 140px;
+	width: 160px;
+	text-align: center;
+	bottom: 0;
+	right: 0;
+	color: white;
+}
+
+.social-icons {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.social-login_icon {
+	padding: 20px 10px;
+	color: white;
+	text-decoration: none;
+	text-shadow: 0px 0px 0px 8px #7875b5;
+	transition: transform 0.3s ease;
+}
+
+.social-login_icon:hover {
+	transform: scale(1.2);
+}
+
+@keyframes background-image-position {
+	0% {
+		background-position: 0 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0 50%;
+	}
 }
